Atualiza ids dos inputs

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
         
     <h1>Fórmula de Bhaskara</h1>
 
-    <label id="labelA" for="labelA"> 
+    <label id="labelA" for="valorA"> 
         Valor de <span class="var-text">a</span>:
     <br>
-    <input type="number" id="labelA" placeholder="a"> 
+    <input type="number" id="valorA" placeholder="a"> 
     </label>
 
     <br> 
     <br>
 
-    <label id="labelB" for="labelB"> 
+    <label id="labelB" for="valorB"> 
         Valor de <span class="var-text">b</span>:
     <br>
-    <input type="number" id="labelB" placeholder="b">
-    </label>
+    <input type="number" id="valorB" placeholder="b">
+    </label>    
 
     <br>
     <br>
@@ -29,7 +29,7 @@
     <label id="labelC" for="valorC"> 
         Valor de <span class="var-text">c</span>:
     <br>
-    <input type="number" id="labelC" placeholder="c"> 
+    <input type="number" id="valorC" placeholder="c"> 
     </label>
 
     <br>
